
EDITOR

• Improved |paste| handling for redo (dot-repeat) and macros (|recording|):
  • Redoing a large paste is significantly faster and ignores 'autoindent'.
  • Replaying a macro with |@| also replays pasted text.
• On Windows, filename arguments on the command-line prefixed with "~\" or
  "~/" are now expanded to the user's profile directory, not a relative path
  to a literal "~" directory.
• |hl-PmenuMatch| and |hl-PmenuMatchSel| show matched text in completion popup.

EVENTS

• |CompleteDone| now sets the `reason` key in `v:event` which specifies the reason
  for completion being done.
• |vim.on_key()| callbacks can consume the key by returning an empty string.

LSP

• Completion side effects (including snippet expansion, execution of commands
  and application of additional text edits) is now built-in.
• |vim.lsp.util.locations_to_items()| sets `end_col` and `end_lnum` fields.
• |vim.lsp.buf.format()| now supports passing a list of ranges
  via the `range` parameter (this requires support for the
  `textDocument/rangesFormatting` request).
• |vim.lsp.buf.code_action()| actions show client name when there are multiple
  clients.
• |vim.lsp.buf.signature_help()| can now cycle through different signatures
  using `<C-s>` and also support multiple clients.
• The client now supports `'utf-8'` and `'utf-32'` position encodings.
• |vim.lsp.buf.hover()| now highlights hover ranges using the
  |hl-LspReferenceTarget| highlight group.
• Functions in |vim.lsp.Client| can now be called as methods.
• Implemented LSP folding: |vim.lsp.foldexpr()|
  https://microsoft.github.io/language-server-protocol/specification/#textDocument_foldingRange
• |vim.lsp.config()| has been added to define default configurations for
  servers. In addition, configurations can be specified in `lsp/<name>.lua`.
• |vim.lsp.enable()| has been added to enable servers.

LUA

• |vim.fs.rm()| can delete files and directories.
• |vim.validate()| now has a new signature which uses less tables,